tp-cp-hawk, tp-dp-hawkconsole & tp-cp-hawk-console-recipes for 1.3.0 release

--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/templates/prometheus-config.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/templates/prometheus-config.yaml
@@ -13,12 +13,12 @@ metadata:
 data:
   prometheus.yml: |-
     global:
-      scrape_interval: 15s
+      scrape_interval: 35s
       evaluation_interval: 15s
 
     scrape_configs:
       - job_name: 'redtailmetrics'
-        scheme: https
+        scheme: http
         basic_auth:
           username: mtuser
           password: QPuf6#2$A
