--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
@@ -51,9 +51,9 @@ images:
   querynode:
     repository:
     image:
-      name: querynode
+      name: hawk-querynode
       pullPolicy: IfNotPresent
-      tag: 106
+      tag: 121
 
 # no of replicas
 replicaCount: "1"
