PCP-5732: push finops+monitoring 1.3.0 charts to public repo

--- a/charts/tp-cp-core-finops/charts/finops-prometheus/templates/tp-cp-finops-prometheus.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-prometheus/templates/tp-cp-finops-prometheus.yaml
@@ -60,7 +60,7 @@ spec:
           securityContext:
             {{- toYaml .Values.global.containerSecurityContext.finopsPrometheus | nindent 12 }}
           {{- end }}        
-          image: {{ include "finops-prometheus.image.registry" .}}{{"/"}}{{ include "finops-prometheus.image.repository" .}}{{"/tp-cp-finops-prometheus"}}:{{ include "finops-prometheus.generated.buildNumber" . }}
+          image: {{ include "finops-prometheus.image.registry" .}}{{"/"}}{{ include "finops-prometheus.image.repository" .}}{{"/tel-finops-prometheus"}}:{{ include "finops-prometheus.generated.buildNumber" . }}
           resources:
             requests:
               cpu: {{ .Values.finopsprometheus.resources.requests.cpu }}
