--- a/charts/tp-cp-core-finops/charts/finops-service/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-service/values.yaml
@@ -6,8 +6,8 @@ global:
     logging:
       fluentbit:
         image:
-          name: "fluentbit"
-          tag: 3.0.2
+          name: "common-fluentbit"
+          tag: 3.1.4
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
   # The user, group, and filesystem group IDs are all set to 1000.
