--- a/charts/tp-cp-core-finops/templates/finops-dns-cm.yaml
+++ b/charts/tp-cp-core-finops/templates/finops-dns-cm.yaml
@@ -21,3 +21,6 @@ data:
   FINOPS_PROMETHEUS_HOST: {{ include "tp-cp-core-finops.consts.finopsPrometheusHost" . }}
   SYSTEM_INTERNAL_PROVISIONER_AGENT_HOST: {{ include "tp-cp-core-finops.consts.provisonerAgentHost" . }}
   SYSTEM_INTERNAL_FINOPS_OTEL_HOST: {{ include "tp-cp-core-finops.consts.finopsOTelHost" . }}
+  TP_CP_BE_WEBSERVER_HOST: {{ include "tp-cp-core-finops.consts.beWebServer" . }}
+  TP_CP_BW5_WEBSERVER_HOST: {{ include "tp-cp-core-finops.consts.bw5WebServer" . }}
+  TP_CP_BW6_WEBSERVER_HOST: {{ include "tp-cp-core-finops.consts.bw6WebServer" . }}
