--- a/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service.yaml
@@ -36,7 +36,6 @@ metadata:
   labels:
     {{- include "monitoring-service.shared.labels.standard" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       {{- include "monitoring-service.shared.labels.selector" . | nindent 6 }}
@@ -71,7 +70,7 @@ spec:
         securityContext:
           {{- toYaml .Values.global.containerSecurityContext.monitoringService | nindent 10 }}
         {{- end }}        
-        image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/tp-cp-monitoring-service"}}:{{ include "monitoring-service.generated.buildNumber" . }}
+        image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/tel-monitoring-service"}}:{{ include "monitoring-service.generated.buildNumber" . }}
         resources:
           requests:
             cpu: {{ .Values.monitoringservice.resources.requests.cpu }}
@@ -136,12 +135,33 @@ spec:
             configMapKeyRef:
               name: {{ include "monitoring-service.tp-finops-dnsdomains-configmap" . }}
               key: TP_CP_USER_SUBSCRIPTIONS_HOST
+        - name: CP_BW6_WEBSERVER_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "monitoring-service.tp-finops-dnsdomains-configmap" . }}
+              key: TP_CP_BW6_WEBSERVER_HOST
+        - name: CP_BW5_WEBSERVER_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "monitoring-service.tp-finops-dnsdomains-configmap" . }}
+              key: TP_CP_BW5_WEBSERVER_HOST
+        - name: CP_BE_WEBSERVER_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "monitoring-service.tp-finops-dnsdomains-configmap" . }}
+              key: TP_CP_BE_WEBSERVER_HOST
         - name: SERVER_PORT
           value: {{ include "monitoring-service.consts.http.serverport" . | quote }}
         - name: MONITOR_SERVER_PORT
           value: {{ include "monitoring-service.consts.http.monitorserverport" . | quote }}
         - name: CP_USER_SUBSCRIPTION_SERVER_PORT
           value: "8832"
+        - name: CP_BW6_WEBSERVER_SERVICE_PORT
+          value: "3000"
+        - name: CP_BW5_WEBSERVER_SERVICE_PORT
+          value: "3001"
+        - name: CP_BE_WEBSERVER_SERVICE_PORT
+          value: "7654"
         - name: SYSTEM_INTERNAL_COMPUTE_SERVICE_HOST
           valueFrom:
             configMapKeyRef:
@@ -236,7 +256,10 @@ spec:
         - name: WRITE_POSTGRES_DATABASE_SSL_KEY
           value: ""
         - name: WRITE_POSTGRES_DATABASE_SSL_ROOT_CERT
-          value: /private/finops/certificates/global-bundle.pem
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "monitoring-service.consts.cp.db.configuration" . }}
+              key: DBSSLRootCert
         - name: READ_POSTGRES_DATABASE_SSL_MODE
           valueFrom:
             configMapKeyRef:
@@ -247,11 +270,14 @@ spec:
         - name: READ_POSTGRES_DATABASE_SSL_KEY
           value: ""
         - name: READ_POSTGRES_DATABASE_SSL_ROOT_CERT
-          value: /private/finops/certificates/global-bundle.pem
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "monitoring-service.consts.cp.db.configuration" . }}
+              key: DBSSLRootCert
         volumeMounts:
         - name: store-vol
-          mountPath: /private/finops/certificates
-          subPath: finops/certificates
+          mountPath: /private/tsc/certificates
+          subPath: tsc/certificates
 {{- if (include "cp-core-configuration.enableLogging" .) }}
       - name: fluentbit
         image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/"}}{{ .Values.global.tibco.logging.fluentbit.image.name }}:{{ .Values.global.tibco.logging.fluentbit.image.tag }}
@@ -310,6 +336,33 @@ spec:
         - name: store-vol
           persistentVolumeClaim:
             claimName: {{ include "cp-core-configuration.pvc-name" . }}
+---
+
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: {{ include "monitoring-service.consts.appName" . }}
+  namespace: {{ include "monitoring-service.consts.namespace" . }}
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: {{ include "monitoring-service.consts.appName" . }}
+  minReplicas: {{ .Values.replicaCount }}
+  maxReplicas: {{ add 2 .Values.replicaCount }}
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.hpa.cpu }}
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.hpa.memory }}
 ---
 
 kind: TibcoRoute
@@ -386,7 +439,7 @@ spec:
             securityContext:
               {{- toYaml .Values.global.containerSecurityContext.monitoringCronJob | nindent 14 }}
             {{- end }}
-            image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/distroless-base-debian-debug:12"}}
+            image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/common-distroless-base-debian-debug:12"}}
             imagePullPolicy: IfNotPresent
             resources:
               requests:
@@ -399,7 +452,59 @@ spec:
             args:
               - -c
               - >
-                  exit_status=$(wget --output-document=/dev/null http://${MONITORING_SERVICE_HOST}':7831/api/v1/tibTunnelRefresh');
+                  exit_status=$(wget --timeout=56 --output-document=/dev/null http://${MONITORING_SERVICE_HOST}':7831/api/v1/tibTunnelRefresh');
+                  echo $exit_status
+                  
+            env:
+              - name: MONITORING_SERVICE_HOST
+                valueFrom:
+                  configMapKeyRef:
+                    name: {{ include "monitoring-service.tp-finops-dnsdomains-configmap" . }}
+                    key: TP_CP_MONITORING_SERVICE_HOST
+          restartPolicy: OnFailure
+---
+
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: tp-cp-monitoring-capresources-cronjob
+spec:
+  schedule: {{ .Values.monitoringcapresources.schedule | quote}}
+  concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 2
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          {{- if .Values.global.podSecurityContext }}
+          securityContext:
+            {{- toYaml .Values.global.podSecurityContext | nindent 12 }}
+          {{- end }}
+          {{- if (include "cp-core-configuration.container-registry.secret" .) }}
+          imagePullSecrets:
+            - name: {{ include "cp-core-configuration.container-registry.secret" . }}
+          {{ end }}
+          containers:
+          - name: tibtunnel-refresh
+            {{- if .Values.global.containerSecurityContext.monitoringCronJob }}
+            securityContext:
+              {{- toYaml .Values.global.containerSecurityContext.monitoringCronJob | nindent 14 }}
+            {{- end }}
+            image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/common-distroless-base-debian-debug:12"}}
+            imagePullPolicy: IfNotPresent
+            resources:
+              requests:
+                cpu: {{ .Values.monitoringcapresources.resources.requests.cpu }}
+                memory: {{ .Values.monitoringcapresources.resources.requests.memory }}
+              limits:
+                cpu: {{ .Values.monitoringcapresources.resources.limits.cpu }}
+                memory: {{ .Values.monitoringcapresources.resources.limits.memory }}
+            command: ['sh']
+            args:
+              - -c
+              - >
+                  exit_status=$(wget --timeout=56 --output-document=/dev/null http://${MONITORING_SERVICE_HOST}':7831/api/v1/resourceRefresh');
                   echo $exit_status
                   
             env:
@@ -438,7 +543,7 @@ spec:
             securityContext:
               {{- toYaml .Values.global.containerSecurityContext.monitoringCronJob | nindent 14 }}
             {{- end }}          
-            image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/distroless-base-debian-debug:12"}}
+            image: {{ include "monitoring-service.image.registry" .}}{{"/"}}{{ include "monitoring-service.image.repository" .}}{{"/common-distroless-base-debian-debug:12"}}
             imagePullPolicy: IfNotPresent
             resources:
               requests:
