--- a/charts/tp-cp-core-finops/charts/monitoring-service/values.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/values.yaml
@@ -12,8 +12,8 @@ global:
     logging:
       fluentbit:
         image:
-          name: "fluentbit"
-          tag: 3.0.2
+          name: "common-fluentbit"
+          tag: 3.1.4
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
   # The user, group, and filesystem group IDs are all set to 1000.
@@ -86,6 +86,15 @@ monitoringtibtunnel:
     limits:
       cpu: "80m"
       memory: "10Mi"
+monitoringcapresources:
+  schedule: "* * * * *"
+  resources:
+    requests:
+      cpu: "80m"
+      memory: "6Mi"
+    limits:
+      cpu: "80m"
+      memory: "10Mi"
 monitoringhomepagemetrics:
   schedule: "0 * * * *"
   resources:
@@ -95,5 +104,10 @@ monitoringhomepagemetrics:
     limits:
       cpu: "80m"
       memory: "10Mi"
+# HPA
+hpa:
+  cpu: 70
+  memory: 70
+
 # no of replicas
-replicaCount: "3"
+replicaCount: "1"
