Publishing platform-base 1.3.0

--- a/charts/platform-base/values.yaml
+++ b/charts/platform-base/values.yaml
@@ -6,8 +6,12 @@
 
 # Bundle CP side charts
 global:
+  tibco:
+    is_replica_region: false
   external:
     db_host: ""
+    db_master_writer_host: ""
+    db_local_reader_host: ""
     db_name: ""
     db_port: ""
     db_username: ""
