readOnlyRootFileSystem for cpdpproxy-1

--- a/charts/dp-core-infrastructure/charts/haproxy/templates/controller-deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/templates/controller-deployment.yaml
@@ -85,6 +85,7 @@ spec:
         runAsNonRoot: true
         runAsUser:  1000
         runAsGroup: 1000
+        readOnlyRootFilesystem: true
 {{- end }}
       containers:
         - name: {{ include "kubernetes-ingress.name" . }}-{{ .Values.controller.name }}
