--- a/charts/dp-core-infrastructure/charts/haproxy/Chart.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/Chart.yaml
@@ -7,12 +7,13 @@
 
 annotations:
   artifacthub.io/changes: |
+    - readOnlyRootFilesystem: true
     - Use Ingress Controller 1.11.3 version for base image
     - Add more permissions needed for techdump tool
     - Parametrize metrics service type (#231)
     - Require K8s >= 1.23.0
 apiVersion: v2
-appVersion: 1.11.3
+appVersion: 1.11.4
 description: A Helm chart for HAProxy Kubernetes Ingress Controller
 home: https://github.com/haproxytech/helm-charts/tree/main/kubernetes-ingress
 icon: https://raw.githubusercontent.com/haproxytech/helm-charts/main/kubernetes-ingress/chart-icon.png
