--- a/charts/dp-core-infrastructure/charts/haproxy/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/values.yaml
@@ -520,24 +520,20 @@ controller:
   #   args: ["-c", "while true; do date; sleep 5;done"]
 
   ## Additional volumeMounts to the controller main container
-  extraVolumeMounts: []
+  extraVolumeMounts: 
   ## Example empty volume mounts when using securityContext->readOnlyRootFilesystem
-  # - name: etc-haproxy
-  #   mountPath: /etc/haproxy
-  # - name: tmp
-  #   mountPath: /tmp
-  # - name: var-state-haproxy
-  #   mountPath: /var/state/haproxy
+   - name: etc-haproxy
+     mountPath: /etc/haproxy
+   - name: var-state-haproxy
+     mountPath: /var/state/haproxy
 
   ## Additional volumes to the controller pod
-  extraVolumes: []
+  extraVolumes: 
   ## Example empty volumes when using securityContext->readOnlyRootFilesystem
-  # - name: etc-haproxy
-  #   emptyDir: {}
-  # - name: tmp
-  #   emptyDir: {}
-  # - name: var-state-haproxy
-  #   emptyDir: {}
+   - name: etc-haproxy
+     emptyDir: {}
+   - name: var-state-haproxy
+     emptyDir: {}
 
   ## ServiceMonitor
   ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/user-guides/getting-started.md
