--- a/charts/tp-cp-core/values.yaml
+++ b/charts/tp-cp-core/values.yaml
@@ -35,6 +35,7 @@ global:
         tag: 12
     self_hosted_deployment: true
     is_replica_region: false
+    finops: "disable"
 
   external:
     db_host: ""
