--- a/charts/tp-cp-core/charts/web-server/templates/cp-webserver.yaml
+++ b/charts/tp-cp-core/charts/web-server/templates/cp-webserver.yaml
@@ -214,6 +214,8 @@ spec:
           value: {{ include "tp-cp-web-server.consts.web.server.log.enabled" . | quote }}
         - name: TSC_DOMAIN
           value: https://$(TSC_DNS_DOMAIN)
+        - name: FINOPS
+          value: {{ .Values.global.tibco.finops }}
         - name: ADMIN_DOMAIN
           value: https://$(TSC_ADMIN_DNS_DOMAIN)
         - name: REGION
@@ -226,11 +228,7 @@ spec:
         - name: TSC_CONFIG_LOCATION
           value: /private/tsc
         - name: CP_HELM_REPO
-          value: {{ .Values.global.CP_HELM_REPO }}
-        - name: CP_PROD_HELM_REPO
-          value: {{ .Values.global.CP_PROD_HELM_REPO }}
-        - name: CP_STAGING_HELM_REPO
-          value: {{ .Values.global.CP_STAGING_HELM_REPO }}
+          value: {{ .Values.global.external.helmRepo }}
         - name: CP_CONTAINER_REGISTRY_IMAGE_PULL_SECRET_NAME
           value: {{ include "cp-core-configuration.container-registry-image-pull-secret-name" . | quote }}
         - name: CP_CONTAINER_REGISTRY_USERNAME
