--- a/charts/tp-cp-core-finops/charts/finops-otel-collector/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-otel-collector/values.yaml
@@ -214,6 +214,7 @@ podSecurityContext:
 
 securityContext:
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
       - ALL
