--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
@@ -30,6 +30,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     querynode:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
