--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -49,6 +49,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
             - ALL
@@ -111,6 +112,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   bwprovisioner:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
       - ALL
