--- a/charts/dp-core-infrastructure/charts/tp-tibtunnel/values.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-tibtunnel/values.yaml
@@ -116,6 +116,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   tibtunnel:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
       - ALL
