--- a/charts/dp-core-infrastructure/values.yaml
+++ b/charts/dp-core-infrastructure/values.yaml
@@ -33,6 +33,7 @@ global:
         runAsNonRoot: false
         runAsUser: 0
         allowPrivilegeEscalation: false
+        readOnlyRootFilesystem: true
         capabilities:
           drop:
             - ALL
