--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -177,6 +177,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
             - ALL
@@ -228,6 +229,7 @@ securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
     - ALL
