--- a/charts/tp-cp-bootstrap/charts/compute-services/values.yaml
+++ b/charts/tp-cp-bootstrap/charts/compute-services/values.yaml
@@ -75,6 +75,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   computeServices:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
@@ -121,6 +122,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
