--- a/charts/tp-cp-bootstrap/charts/router-operator/values.yaml
+++ b/charts/tp-cp-bootstrap/charts/router-operator/values.yaml
@@ -69,6 +69,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   router:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
@@ -101,6 +102,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
