--- a/charts/tp-cp-configuration/files/tp-cp-subscription/values.yaml
+++ b/charts/tp-cp-configuration/files/tp-cp-subscription/values.yaml
@@ -47,6 +47,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   hybridServer:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
@@ -97,6 +98,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
