--- a/charts/tp-cp-core-finops/charts/finops-prometheus/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-prometheus/values.yaml
@@ -34,6 +34,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     finopsPrometheus:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -47,6 +48,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
