--- a/charts/tp-cp-core-finops/charts/finops-service/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-service/values.yaml
@@ -28,6 +28,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     finopsService:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -41,6 +42,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL    
