--- a/charts/tp-cp-core-finops/charts/monitoring-service/values.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/values.yaml
@@ -34,11 +34,13 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     monitoringService:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
     monitoringCronJob:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -52,6 +54,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
