--- a/charts/tp-cp-core/charts/identity-management/values.yaml
+++ b/charts/tp-cp-core/charts/identity-management/values.yaml
@@ -36,6 +36,7 @@ global:
   containerSecurityContext:
     idm:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -50,6 +51,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
