--- a/charts/tp-cp-core/charts/identity-provider/values.yaml
+++ b/charts/tp-cp-core/charts/identity-provider/values.yaml
@@ -37,6 +37,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     tpcpidpservice:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -50,6 +51,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
