--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -39,6 +39,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     orchestrator:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
           drop:
             - ALL
@@ -53,6 +54,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
