--- a/charts/tp-cp-core/charts/web-server/values.yaml
+++ b/charts/tp-cp-core/charts/web-server/values.yaml
@@ -36,6 +36,7 @@ global:
       # It specifies that privilege escalation is not allowed for security reasons.
       # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -50,6 +51,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
