--- a/charts/tp-cp-hawk/values.yaml
+++ b/charts/tp-cp-hawk/values.yaml
@@ -35,6 +35,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     hawkinfrajobs:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -49,6 +50,7 @@ global:
         runAsNonRoot: false
         runAsUser: 0
         allowPrivilegeEscalation: false
+        readOnlyRootFilesystem: true
         capabilities:
           drop:
             - ALL
