--- a/charts/tp-cp-integration-bw5/charts/bw5-webserver/values.yaml
+++ b/charts/tp-cp-integration-bw5/charts/bw5-webserver/values.yaml
@@ -36,6 +36,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -78,6 +79,7 @@ securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
       - ALL
