--- a/charts/tp-cp-o11y/charts/o11y-service/values.yaml
+++ b/charts/tp-cp-o11y/charts/o11y-service/values.yaml
@@ -30,6 +30,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
