--- a/charts/tp-dp-monitor-agent/values.yaml
+++ b/charts/tp-dp-monitor-agent/values.yaml
@@ -23,6 +23,7 @@ global:
         runAsNonRoot: false
         runAsUser: 0
         allowPrivilegeEscalation: false
+        readOnlyRootFilesystem: true
         capabilities:
           drop:
           - ALL
@@ -44,6 +45,7 @@ podSecurityContext:
 securityContext:
   monitorAgent:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
       - ALL
