--- a/charts/tp-cp-proxy/templates/jobs.yaml
+++ b/charts/tp-cp-proxy/templates/jobs.yaml
@@ -44,6 +44,8 @@ spec:
               value: {{ .Values.global.cp.dataplaneId }}
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+          securityContext:
+            readOnlyRootFilesystem: true
       imagePullSecrets:
         - name: {{ .Values.global.cp.containerRegistry.secret }} {{/* optional imagePullSecret for private repo. no op if secret does not exist */}}
 
