--- a/charts/oauth2-proxy-manifests/values.yaml
+++ b/charts/oauth2-proxy-manifests/values.yaml
@@ -423,8 +423,8 @@ extraObjects: []
 
 tibco:
   initContainer:
-    image: alpine
-    tag: 3.18
+    image: core-alpine-curl-jq
+    tag: 1
   loggerContainer:
     image: fluentbit
     tag: 2.1.6
