--- a/charts/tp-cp-core/charts/identity-management/values.yaml
+++ b/charts/tp-cp-core/charts/identity-management/values.yaml
@@ -7,6 +7,7 @@
 global:
   tibco:
     self_hosted_deployment: true
+    idm_cp_jwks_uri: "/private/tsc/config/idm/own-keystores/cic_cli_host.pem"
     region: "global"
     region_to_prefix: ""
     image_name:
